--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,59 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Calculadora</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content class="ion-padding">
+  <div class="calculator-container">
+    <!-- Display -->
+    <div class="display">{{ displayValue }}</div>
+    <!-- Botões -->
+    <ion-grid>
+      <ion-row>
+        <ion-col><ion-button expand="full"(click)="clear()">C</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendOperator('/')">/</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendOperator('*')">*</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="deleteLast()">DEL</ion-button></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><ion-button expand="full" (click)="appendNumber('7')">7</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendNumber('8')">8</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendNumber('9')">9</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendOperator('-')">-</ion-button></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><ion-button expand="full" (click)="appendNumber('4')">4</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendNumber('5')">5</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendNumber('6')">6</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendOperator('+')">+</ion-button></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><ion-button expand="full" (click)="appendNumber('1')">1</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendNumber('2')">2</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendNumber('3')">3</ion-button></ion-col>
+<!--        <ion-col><ion-button expand="full" (click)="calculate()">=</ion-button></ion-col>   -->
+      </ion-row>
+      <ion-row>
+        <ion-col size="6"><ion-button expand="full" (click)="appendNumber('0')">0</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="appendNumber('.')">.</ion-button></ion-col>
+        <ion-col><ion-button expand="full" (click)="calculate()">=</ion-button></ion-col>
+      </ion-row>
+    </ion-grid>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
+
+<ion-grid>
+ <ion-row>
+  <ion-item>
+    <ion-label position="floating">Primeiro Número</ion-label>
+    <ion-input type="number" [(ngModel)]="numero1"></ion-input>
+  </ion-item>
+ <ion-item>
+    <ion-label position="floating">Segundo Número</ion-label>
+    <ion-input type="number" [(ngModel)]="numero2"></ion-input>
+  </ion-item>
+ </ion-row>
+</ion-grid>
+
 </ion-content>
+
