--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,21 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.calculator-container {
+  max-width: 400px;
+  margin: auto;
+  padding-top: 20px;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.display {
+  background-color: #f4f4f4;
+  padding: 10px;
+  text-align: right;
+  font-size: 2em;
+  min-height: 1.5em;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  color: black;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-button {
+  --padding-start: 0;
+  --padding-end: 0;
+  height: 60px;
+  font-size: 1.2em;
 }
